[package]
name = "rust-inverter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.13.1"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls" ], default-features = false}
